# webspec

./: .gitignore  Dockerfile  Makefile  README.md  shell.nix  webspec
compiler/: Makefile  dune-project  extractor.opam
compiler/src/: ast.ml  ast.mli  ast_pp.ml  ast_pp.mli  ast_transformation.ml  ast_transformation.mli  ast_utils.ml  ast_utils.mli  cic.ml  cic.mli  config.ml  config.mli  debug.ml  debug.mli  dune  extract.ml  extract.mli  extractor.mlg  extractor.mlpack  logger.ml  logger.mli  omega.ml  omega.mli  omicron.ml  omicron.mli  primitive.ml  primitive.mli  result.ml  result.mli  smtlib.ml  smtlib.mli  smtlib_pp.ml  smtlib_pp.mli  smtlib_utils.ml  smtlib_utils.mli  temporary.ml  utils.ml  utils.mli
compiler/theories/: Array.v  Equality.v  Loader.v  dune
model/: Browser.v  BrowserLemmas.v  BrowserStates.v  CORSInvariant.v  CSPInvariant.v  HostInvariant.v  HttpOnlyInvariant.v  LSInvariant.v  LemmaCSPQuery.v  LemmaIframeSamesiteScriptState.v  LemmaScriptState.v  LoadPath.v  OCamlExtract.v  OriginInvariant.v  SOPInvariant.v  SWInvariant.v  SecureCookiesInvariant.v  TTInvariant.v
nix/: coq-procrastination.nix  z3-patched.nix  z3_bmc_initial_unrolling_level.patch
scripts/: display_trace.ml  run.sh  viz.ml  z32coq.el
traces/: CSPInvariant.trace.z3  HostInvariant.trace.z3  LSInvariant.trace.z3  SWInvariant.trace.z3  TTInvariant.trace.z3
verifier/: Dockerfile  dune-project
verifier/model/: dune
verifier/src/: cspcheck.ml  cspcheck.mli  dune  html.ml  html.mli  main.ml  script.ml  script.mli  serviceworker.ml  serviceworker.mli  states.ml  states.mli  test.ml  test.mli  trace.ml  types.ml  types.mli  utils.ml  utils.mli  uuid.ml  uuid.mli  visitor.ml  visitor.mli  wpt.ml  wpt.mli
verifier/templates/: install.jingoo  launcher.jingoo  sw.jingoo
