synopsis:     "extractor"
description:  "extractor"
name:         "extractor"
opam-version: "2.0"
maintainer:   "benjamin.farinier@tuwien.ac.at"
authors:      "Benjamin Farinier"
license:      "GPL 3"

depends: [
  "ocaml"         { >= "4.09.1"            }
  "coq"           { >= "8.11.0" & < "8.12" }
  "dune"          { >= "2.6.0"             }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
