(coq.theory
 (name Extractor)               ; This will determine the toplevel
                                ; module of your theory, modules will
                                ; be MyPlugin.A, etc... when seen from
                                ; outside.

 (package extractor)            ; Adding this line will make your
                                ; library installable in the package

 (libraries extractor.plugin))  ; Here you should declare the
                                ; dependencies on the ML plugins your
                                ; Coq files depend.
